[project]
name = "claw-site"
version = "1.0.0"
description = "Single-tool MCP server for extracting URLs via robots.txt, sitemaps, httpx, and crawl4ai fallback"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "ISC" }
keywords = ["mcp", "crawler", "links", "sitemap", "crawl4ai"]
dependencies = [
    "mcp>=1.2.0",
    "crawl4ai>=0.5.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-dotenv>=1.0",
]

[project.scripts]
claw-site = "server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "fetcher", "extract", "errors", "sitemap"]
